methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:2: error: value foreach is not a member of Int
  for(i <- 3){
           ^